rely on py3 branch of XBlock

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ lazy
 six
 
 # XBlock
--e git+https://github.com/singingwolfboy/XBlock.git@5de0638#egg=XBlock
+-e git+https://github.com/singingwolfboy/XBlock.git@py3#egg=XBlock
 
 # Acid xblock
 -e git+https://github.com/edx/acid-block.git@459aff7b63db8f2c5decd1755706c1a64fb4ebb1#egg=acid-xblock
